--- a/register-app/register-app/src/main/resources/application.properties
+++ b/register-app/register-app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=register-app
 # DATABASE PROPERTIES
 spring.datasource.url=jdbc:mysql://localhost:3306/register_db
 spring.datasource.username=root
-spring.datasource.password=bishal2003
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -13,5 +13,5 @@ spring.jpa.show-sql=true
 # EMAIL PROPERTIES
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bishalkarmakar2468@gmail.com
-spring.mail.password=aafzqbrdjuejxzww
+spring.mail.username=${MAIL_HOST}
+spring.mail.password=${MAIL_HOST_PASSWORD}
